--- a/css/styles.css
+++ b/css/styles.css
@@ -69,15 +69,27 @@ img {                   /* adds space so not touching the black header */
 
 #card-container {
     display: flex;
+    justify-content: center;
 }
 
 .card {
     width: 200px;
-    /* height: 70px; */
+    margin: 10px;
+    border: 2px solid grey;
 }
 
 .card-img img {
     width: 100%;
+}
+
+.card h3 {
+    text-align: center;
+}
+
+.card p {
+    text-align: justify;
+    margin-bottom: 10px;
+    padding: 0 10px;
 }
 
 
