--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,18 @@ h2 {
 
 header {
     background-color: black;
+    box-sizing: border-box;
+
 }
 
 a {
     color: white;
+}
+
+a:hover {
+    background-color: white;
+    color: black;
+    /* font-size: larger; */
 }
 
 #nav-links {
@@ -75,7 +83,8 @@ img {                   /* adds space so not touching the black header */
 .card {
     width: 200px;
     margin: 10px;
-    border: 2px solid grey;
+    border: 5px solid black;
+    background-color: black;
 }
 
 .card-img img {
@@ -83,10 +92,12 @@ img {                   /* adds space so not touching the black header */
 }
 
 .card h3 {
+    color: white;
     text-align: center;
 }
 
 .card p {
+    color: white;
     text-align: justify;
     margin-bottom: 10px;
     padding: 0 10px;
