created a contact form & a thank you response

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,14 @@ img {                   /* adds space so not touching the black header */
     padding: 0 10px;
 }
 
+#email-me {
+    color: blueviolet;
+}
+
+
+
+
+
 
 
 
